<resources>
    <string name="app_name">KotlinPractice2026</string>
    <string name="my_name">Name:</string>
    <string name="my_Ak">Abhishek kumar</string>
    <string name="my_Roll">RollNo:</string>
    <string name="my_Rollno">22-B-CSE-004</string>
    <string name="my_class">Class:</string>
    <string name="my_classname">B.TECH.(CSE)</string>
    <string name="my_botton">Login</string>
    <string name="my_botton1">Create Account</string>
    <string name="my_uname">Username</string>
    <string name="my_password">Password</string>
    <string name="my_password1">Confirm Password</string>
    <string name="my_page">Welcome</string>
    <string name="my_page1">Login to your Account</string>
    <string name="my_login">- Or Login With -</string>
    <string name="my_create">Dont have an account?</string>
    <string name="my_page2">Create your Account</string>
    <string name="my_page3">App Developer</string>
    <string name="my_follow">Followers</string>
    <string name="my_follow1">Following</string>
    <string name="my_project">Project</string>
    <string name="my_num1">75K</string>
    <string name="my_num2">10K</string>
    <string name="my_num3">600</string>
    <string name="Create_account">Create Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">submit</string>
    <string name="add">Add</string>
    <string name="sub">sub</string>
    <string name="Red">Red</string>
    <string name="_0">0</string>
    <string name="todo">TODO</string>

</resources>