<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6075E4"
    tools:context="Relative_Activity2"
    >

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/bg"
        android:layout_margin="15dp"
        android:padding="10dp">
    </View>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/image1"
            android:layout_below="@+id/view"
            android:layout_centerInParent="true"
            android:layout_marginTop="-350dp">

        </de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textSize="30sp"
            android:layout_below="@+id/image"
            android:text="@string/my_Ak"/>

        <TextView
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:layout_below="@+id/view1"
            android:text="@string/my_page3"/>

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_below="@+id/view2">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_num1"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_num2"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="65dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_num3"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="65dp"
            />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_below="@+id/layout1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_follow"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_follow1"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginStart="35dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_project"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginStart="35dp"
                />

        </LinearLayout>




</RelativeLayout>