<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/login"
        android:layout_marginBottom="150dp">
    </ImageView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_page2"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textColor="@color/black">

    </TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="20"
            android:padding="10sp"
            android:background="@null"
            android:layout_margin="5dp"
            android:hint="@string/my_uname"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:layout_margin="5dp"
            android:background="@null"
            android:inputType="text"
            android:maxLength="20"
            android:hint="@string/my_password"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:layout_margin="5dp"
            android:background="@null"
            android:inputType="text"
            android:maxLength="20"
            android:hint="@string/my_password1"/>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:shadowRadius="10"
        android:backgroundTint="@color/blue"
        app:cornerRadius="6sp"
        android:text="@string/my_botton1">

    </com.google.android.material.button.MaterialButton>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_login"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="80dp"
            app:cardCornerRadius="8dp"
            android:layout_marginStart="40dp"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:cardElevation="4dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/google"
                android:layout_gravity="center"

                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="80dp"
            app:cardCornerRadius="8dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="20dp"
            app:cardElevation="4dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/facebook"
                android:layout_gravity="center"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="80dp"
            app:cardCornerRadius="8dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="20dp"
            app:cardElevation="4dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/twitter"
                android:layout_gravity="center"
                />
        </androidx.cardview.widget.CardView>


    </LinearLayout>



</LinearLayout>